@@ -1,3 +1,8 @@
+Thu May  8 11:40:39 1997  Larry Jones  <larry.jones@sdrc.com>
+
+	* sanity.sh: In setting "tests" use a number of statements rather
+	than one very long line.
+
 Thu May  8 11:40:39 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
 	* cvsbug.sh: Remove $Id; we decided to get rid of these some time
